SUBDIRS = \
	GUIScript \
	SDLVideo \
	OpenALAudio \
	ZLibManager \
	2DAImporter \
	ACMImporter \
	NullSound \
	AREImporter \
	BAMImporter \
	BIFImporter \
	BMPImporter \
	BMPWriter \
	PNGImporter \
	CHUImporter \
	CREImporter \
	DLGImporter \
	EFFImporter \
	FXOpcodes \
	IWDOpcodes \
	PSTOpcodes \
	GAMImporter \
	IDSImporter \
	INIImporter \
	ITMImporter \
	KEYImporter \
	DirectoryImporter \
	MOSImporter \
	MUSImporter \
	MVEPlayer \
	BIKPlayer \
	PLTImporter \
	PROImporter \
	SPLImporter \
	STOImporter \
	TISImporter \
	TLKImporter \
	WEDImporter \
	WMPImporter

DISTCLEANFILES = *.so
EXTRA_DIST = CMakeLists.txt */CMakeLists.txt
