SUBDIRS = \
	2DAImporter \
	ACMReader \
	AREImporter \
	BAMImporter \
	BIFImporter \
	BIKPlayer \
	BMPImporter \
	BMPWriter \
	CHUImporter \
	CREImporter \
	DLGImporter \
	DirectoryImporter \
	EFFImporter \
	FXOpcodes \
	GAMImporter \
	GUIScript \
	IDSImporter \
	INIImporter \
	ITMImporter \
	IWDOpcodes \
	KEYImporter \
	MOSImporter \
	MUSImporter \
	MVEPlayer \
	NullSound \
	OGGReader \
	OpenALAudio \
	PLTImporter \
	PNGImporter \
	PROImporter \
	PSTOpcodes \
	SDLVideo \
	SPLImporter \
	STOImporter \
	TISImporter \
	TLKImporter \
	WAVReader \
	WEDImporter \
	WMPImporter \
	ZLibManager

DISTCLEANFILES = *.so
EXTRA_DIST = CMakeLists.txt */CMakeLists.txt
