bg1script_DATA = CharGen.py CharGen2.py CharGen3.py CharGen4.py CharGen5.py CharGen6.py GUICG1.py GUICG2.py GUICG3.py GUICG4.py GUICG8.py GUICG12.py GUIDefines.py GUIMOVIE.py Start.py 

bg1scriptdir = $(datadir)/GUIScripts/bg1/

EXTRA_DIST = CharGen.py \
CharGen2.py \
CharGen3.py \
CharGen4.py \
CharGen5.py \
CharGen6.py \
GUICG1.py \
GUICG2.py \
GUICG3.py \
GUICG4.py \
GUICG8.py \
GUICG12.py \
GUIDefines.py \
GUIMOVIE.py \
Start.py \
