iwd2script_DATA = AutoPause.py CharGen.py CharGen2.py CharGen3.py CharSound.py Class.py Feedback.py GUIDefines.py GUILOAD.py GamePlay.py Gender.py Graphics.py Movies.py Options.py Portrait.py Race.py SPParty.py SPPartyFormation.py Sound.py Start.py SubRaces.py
iwd2scriptdir = $(datadir)/GUIScripts/iwd2/
