EXTRA_DIST = begin_code.h close_code.h SDL_active.h SDL_audio.h SDL_byteorder.h SDL_cdrom.h SDL_copying.h SDL_endian.h SDL_error.h SDL_events.h SDL_getenv.h SDL.h SDL_joystick.h SDL_keyboard.h SDL_keysym.h SDL_loadso.h SDL_main.h SDL_mouse.h SDL_mutex.h SDL_name.h SDL_opengl.h SDL_quit.h SDL_rwops.h SDL_syswm.h SDL_thread.h SDL_timer.h SDL_types.h SDL_version.h SDL_video.h 
