bg2override_DATA = ability.2da aligns.2da avatars.2da avprefc.2da avprefg.2da avprefix.2da avprefr.2da classes.2da clowncol.2da clskills.2da containr.2da defsound.2da fistweap.2da fonts.2da item_use.2da itemspec.2da k_m_e.2da k_m_g.2da k_m_h.2da k_m_he.2da magesch.2da pdolls.2da pictures.2da races.2da skills.2da 

bg2overridedir = $(datadir)/override/bg2/
