####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = lib2DAImporter.la


INCLUDES = $(all_includes)


LDFLAGS =     


lib2DAImporter_la_LDFLAGS = -version-info 0:0:0 -L../Core -lcore -ldl

lib2DAImporter_la_METASOURCES = AUTO

lib2DAImporter_la_SOURCES = 2DAImp.cpp 2DAImpCD.cpp 2DAImporter.cpp 


EXTRA_DIST = 2DAImporter.cpp 2DAImpCD.h 2DAImpCD.cpp 2DAImp.h 2DAImp.cpp 

####### kdevelop will overwrite this part!!! (end)############
