lib_LTLIBRARIES = lib2DAImporter.la
INCLUDES = $(all_includes)
#LDFLAGS =     
lib2DAImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
lib2DAImporter_la_LIBADD = ../Core/libcore.la
lib2DAImporter_la_METASOURCES = AUTO
lib2DAImporter_la_SOURCES = 2DAImp.cpp 2DAImpCD.cpp 2DAImporter.cpp
EXTRA_DIST = 2DAImporter.cpp 2DAImpCD.h 2DAImpCD.cpp 2DAImp.h 2DAImp.cpp 
