INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR} ${SDL_INCLUDE_DIR} )

FILE( GLOB ACMImporter_files *.cpp )

ADD_LIBRARY(ACMImporter MODULE ${ACMImporter_files})

TARGET_LINK_LIBRARIES(ACMImporter gemrb_core ${OPENAL_LIBRARY} ${SDL_LIBRARY})

INSTALL( TARGETS ACMImporter DESTINATION ${PLUGIN_INSTALL_DIR} )