lib_LTLIBRARIES = libACMImporter.la
INCLUDES = $(all_includes)
LDFLAGS =          
libACMImporter_la_LDFLAGS = -module -version-info 0:0:0 -lopenal -lSDL @LIBS@
libACMImporter_la_LIBADD = ../Core/libcore.la
libACMImporter_la_METASOURCES = AUTO
libACMImporter_la_SOURCES = unpacker.cpp riffhdr.cpp readers.cpp decoder.cpp ACMImporterCD.cpp ACMImporter.cpp acm2snd.cpp ACMImp.cpp 
EXTRA_DIST = ACMImp.cpp acm2snd.cpp ACMImp.h ACMImporter.cpp ACMImporterCD.cpp ACMImporterCD.h acmsound.h decoder.cpp decoder.h general.h Makefile.am readers.cpp readers.h riffhdr.cpp riffhdr.h unpacker.cpp unpacker.h 
