####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libAREImporter.la


INCLUDES = $(all_includes)


LDFLAGS =          


libAREImporter_la_LDFLAGS = -version-info 0:0:0 -L../Core -lcore -ldl

libAREImporter_la_METASOURCES = AUTO

libAREImporter_la_SOURCES = AREImporter.cpp AREImp.cpp AREImpCD.cpp 


EXTRA_DIST = AREImpCD.cpp AREImpCD.h AREImp.cpp AREImp.h AREImporter.cpp 

####### kdevelop will overwrite this part!!! (end)############
