lib_LTLIBRARIES = libAREImporter.la
INCLUDES = $(all_includes)
LDFLAGS =     
libAREImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBS@
libAREImporter_la_LIBADD = ../Core/libcore.la
libAREImporter_la_METASOURCES = AUTO
libAREImporter_la_SOURCES = AREImporter.cpp AREImp.cpp AREImpCD.cpp 
EXTRA_DIST = AREImpCD.cpp AREImpCD.h AREImp.cpp AREImp.h AREImporter.cpp 
