plugin_LTLIBRARIES = libAREImporter.la
INCLUDES = $(all_includes)
libAREImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libAREImporter_la_LIBADD = ../Core/libgemrb_core.la
libAREImporter_la_METASOURCES = AUTO
libAREImporter_la_SOURCES = AREImporter.cpp AREImp.cpp AREImpCD.cpp 
noinst_HEADERS = AREImpCD.h AREImp.h
