####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libBAMImporter.la


INCLUDES = $(all_includes)


LDFLAGS =          


libBAMImporter_la_LDFLAGS = -version-info 0:0:0 -L../Core -lcore -ldl

libBAMImporter_la_METASOURCES = AUTO

libBAMImporter_la_SOURCES = BAMImporter.cpp BAMImp.cpp BAMImpCD.cpp 


EXTRA_DIST = BAMImpCD.cpp BAMImpCD.h BAMImp.cpp BAMImp.h BAMImporter.cpp 

####### kdevelop will overwrite this part!!! (end)############
