lib_LTLIBRARIES = libBAMImporter.la
INCLUDES = $(all_includes)
CXXFLAGS = -O2
libBAMImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libBAMImporter_la_LIBADD = ../Core/libcore.la
libBAMImporter_la_METASOURCES = AUTO
libBAMImporter_la_SOURCES = BAMImporter.cpp BAMImp.cpp BAMImpCD.cpp 
EXTRA_DIST = BAMImpCD.cpp BAMImpCD.h BAMImp.cpp BAMImp.h BAMImporter.cpp 
