lib_LTLIBRARIES = libBG2HCAnim.la
INCLUDES = $(all_includes)
LDFLAGS =     
libBG2HCAnim_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libBG2HCAnim_la_LIBADD = ../Core/libcore.la
libBG2HCAnim_la_METASOURCES = AUTO
libBG2HCAnim_la_SOURCES = BG2HCAnims.cpp BG2HCAnim.cpp BG2HCAnimCD.cpp 
EXTRA_DIST = BG2HCAnimCD.cpp BG2HCAnimCD.h BG2HCAnim.cpp BG2HCAnim.h BG2HCAnims.cpp 
