####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libBIFImporter.la


INCLUDES = $(all_includes)


LDFLAGS =     


libBIFImporter_la_LDFLAGS = -version-info 0:0:0 -L../Core -lcore -ldl

libBIFImporter_la_METASOURCES = AUTO

libBIFImporter_la_SOURCES = BIFImporter.cpp BIFImp.cpp BIFImpCD.cpp 


EXTRA_DIST = BIFImpCD.cpp BIFImpCD.h BIFImp.cpp BIFImp.h BIFImporter.cpp 

####### kdevelop will overwrite this part!!! (end)############
