lib_LTLIBRARIES = libBIFImporter.la
INCLUDES = $(all_includes)
libBIFImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libBIFImporter_la_LIBADD = ../Core/libcore.la
libBIFImporter_la_METASOURCES = AUTO
libBIFImporter_la_SOURCES = BIFImporter.cpp BIFImp.cpp BIFImpCD.cpp 
EXTRA_DIST = BIFImpCD.cpp BIFImpCD.h BIFImp.cpp BIFImp.h BIFImporter.cpp 
