plugin_LTLIBRARIES = libBMPImporter.la
INCLUDES = $(all_includes)
libBMPImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libBMPImporter_la_LIBADD = ../Core/libgemrb_core.la
libBMPImporter_la_METASOURCES = AUTO
libBMPImporter_la_SOURCES = BMPImporter.cpp BMPImp.cpp BMPImpCD.cpp 
noinst_HEADERS = BMPImpCD.h BMPImp.h
