####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libCHUImporter.la


INCLUDES = $(all_includes)


LDFLAGS =          


libCHUImporter_la_LDFLAGS = -version-info 0:0:0 -L../Core -lcore -ldl

libCHUImporter_la_METASOURCES = AUTO

libCHUImporter_la_SOURCES = CHUImporter.cpp CHUImp.cpp CHUImpCD.cpp 


EXTRA_DIST = CHUImpCD.cpp CHUImpCD.h CHUImp.cpp CHUImp.h CHUImporter.cpp 

####### kdevelop will overwrite this part!!! (end)############
