lib_LTLIBRARIES = libCHUImporter.la
INCLUDES = $(all_includes)
LDFLAGS =     
libCHUImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libCHUImporter_la_LIBADD = ../Core/libcore.la
libCHUImporter_la_METASOURCES = AUTO
libCHUImporter_la_SOURCES = CHUImporter.cpp CHUImp.cpp CHUImpCD.cpp 
EXTRA_DIST = CHUImpCD.cpp CHUImpCD.h CHUImp.cpp CHUImp.h CHUImporter.cpp 
