plugin_LTLIBRARIES = libCHUImporter.la
INCLUDES = $(all_includes)
libCHUImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libCHUImporter_la_LIBADD = ../Core/libgemrb_core.la
libCHUImporter_la_METASOURCES = AUTO
libCHUImporter_la_SOURCES = CHUImporter.cpp CHUImp.cpp CHUImpCD.cpp 
noinst_HEADERS = CHUImpCD.h CHUImp.h
