####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libCREImporter.la


INCLUDES = $(all_includes)


LDFLAGS =     


libCREImporter_la_LDFLAGS = -version-info 0:0:0 -L../Core -lcore -ldl

libCREImporter_la_METASOURCES = AUTO

libCREImporter_la_SOURCES = CREImporter.cpp CREImp.cpp CREImpCD.cpp 


EXTRA_DIST = CREImpCD.cpp CREImpCD.h CREImp.cpp CREImp.h CREImporter.cpp 

####### kdevelop will overwrite this part!!! (end)############
