lib_LTLIBRARIES = libCREImporter.la
INCLUDES = $(all_includes)
LDFLAGS =     
libCREImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libCREImporter_la_LIBADD = ../Core/libcore.la
libCREImporter_la_METASOURCES = AUTO
libCREImporter_la_SOURCES = CREImporter.cpp CREImp.cpp CREImpCD.cpp 
EXTRA_DIST = CREImpCD.cpp CREImpCD.h CREImp.cpp CREImp.h CREImporter.cpp 
