plugin_LTLIBRARIES = libCREImporter.la
INCLUDES = $(all_includes)
libCREImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libCREImporter_la_LIBADD = ../Core/libgemrb_core.la
libCREImporter_la_METASOURCES = AUTO
libCREImporter_la_SOURCES = CREImporter.cpp CREImp.cpp CREImpCD.cpp 
noinst_HEADERS = CREImpCD.h CREImp.h
