ADD_DEFINITIONS(-DGEM_BUILD_DLL)

FILE(GLOB gemrb_core_LIB_SRCS "*.cpp")

ADD_LIBRARY(gemrb_core SHARED ${gemrb_core_LIB_SRCS} )

IF(WIN32)
 INSTALL(TARGETS gemrb_core RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
ELSE(WIN32)
 INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${PLUGIN_INSTALL_DIR})
ENDIF(WIN32)
