ADD_DEFINITIONS(-DGEM_BUILD_DLL)

FILE(GLOB gemrb_core_LIB_SRCS "*.cpp")

ADD_LIBRARY(gemrb_core SHARED ${gemrb_core_LIB_SRCS} )

SET_TARGET_PROPERTIES(gemrb_core PROPERTIES
	COMPILE_DEFINITIONS
	"PLUGINDIR=\"${PLUGIN_DIR}\";DATADIR=\"${DATA_DIR}\";SYSCONFDIR=\"${SYSCONF_DIR}\""
	)

INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${LIB_DIR})
