lib_LTLIBRARIES = libcore.la
INCLUDES = $(all_includes)
libcore_la_LDFLAGS = -version-info 0:0:0 @LIBDL@ @LIBPTHREAD@
libcore_la_METASOURCES = AUTO
libcore_la_SOURCES = ScriptedAnimation.cpp GameScript.cpp GlobalTimer.cpp Polygon.cpp Game.cpp GameControl.cpp Variables.cpp SaveGameIterator.cpp DataFileMgr.cpp TableMgr.cpp MusicMgr.cpp SoundMgr.cpp Console.cpp ScriptEngine.cpp TextEdit.cpp EventMgr.cpp ScrollBar.cpp TextArea.cpp Slider.cpp Label.cpp WindowMgr.cpp Window.cpp VideoModes.cpp VideoMode.cpp Video.cpp TileSetMgr.cpp TileOverlay.cpp TileMapMgr.cpp TileMap.cpp Tile.cpp SymbolMgr.cpp StringMgr.cpp Sprite2D.cpp ResourceMgr.cpp Region.cpp PluginMgr.cpp Plugin.cpp MoviePlayer.cpp MemoryStream.cpp MapMgr.cpp Map.cpp InterfaceDesc.cpp Interface.cpp ImageMgr.cpp Font.cpp FileStream.cpp FactoryObject.cpp Factory.cpp DataStream.cpp Core.cpp Control.cpp Compressor.cpp Class_ID.cpp ClassDesc.cpp CharAnimations.cpp CachedFileStream.cpp Button.cpp ArchiveImporter.cpp AnimationMgr.cpp AnimationFactory.cpp Animation.cpp ActorMgr.cpp Actor.cpp ActorBlock.cpp SaveGameMgr.cpp DialogMgr.cpp Dialog.cpp
noinst_HEADERS = *.h
