lib_LTLIBRARIES = libgemrb_core.la
INCLUDES = $(all_includes)
libgemrb_core_la_LDFLAGS = -version-info 0:0:0 @LIBDL@ @LIBPTHREAD@
libgemrb_core_la_METASOURCES = AUTO
libgemrb_core_la_SOURCES = \
	Progressbar.cpp \
	ScriptedAnimation.cpp \
	GameScript.cpp \
	GlobalTimer.cpp \
	Polygon.cpp \
	Game.cpp \
	GameControl.cpp \
	Variables.cpp \
	SaveGameIterator.cpp \
	DataFileMgr.cpp \
	TableMgr.cpp \
	MusicMgr.cpp \
	SoundMgr.cpp \
	Console.cpp \
	ScriptEngine.cpp \
	TextEdit.cpp \
	EventMgr.cpp \
	ScrollBar.cpp \
	TextArea.cpp \
	Slider.cpp \
	Label.cpp \
	WindowMgr.cpp \
	Window.cpp \
	VideoModes.cpp \
	VideoMode.cpp \
	Video.cpp \
	VFS.cpp \
	TileSetMgr.cpp \
	TileOverlay.cpp \
	TileMapMgr.cpp \
	TileMap.cpp \
	Tile.cpp \
	WorldMap.cpp \
	WorldMapMgr.cpp \
	SymbolMgr.cpp \
	StringMgr.cpp \
	Sprite2D.cpp \
	ResourceMgr.cpp \
	Region.cpp \
	PluginMgr.cpp \
	Plugin.cpp \
	MoviePlayer.cpp \
	MemoryStream.cpp \
	MapMgr.cpp \
	Map.cpp \
	InterfaceDesc.cpp \
	Interface.cpp \
	ImageMgr.cpp \
	Font.cpp \
	FileStream.cpp \
	FactoryObject.cpp \
	Factory.cpp \
	DataStream.cpp \
	Core.cpp \
	Control.cpp \
	Compressor.cpp \
	Class_ID.cpp \
	ClassDesc.cpp \
	CharAnimations.cpp \
	CachedFileStream.cpp \
	Button.cpp \
	ArchiveImporter.cpp \
	AnimationMgr.cpp \
	AnimationFactory.cpp \
	Animation.cpp \
	ActorMgr.cpp \
	Actor.cpp \
	ActorBlock.cpp \
	SaveGameMgr.cpp \
	DialogMgr.cpp \
	Dialog.cpp \
	SpellMgr.cpp \
	Spell.cpp \
	ItemMgr.cpp \
	Item.cpp \
	StoreMgr.cpp \
	Store.cpp \
	Inventory.cpp \
	Spellbook.cpp \
	Ambient.cpp

noinst_HEADERS = *.h
