lib_LTLIBRARIES = libDLGImporter.la
INCLUDES = $(all_includes)
#LDFLAGS =     
libBMPImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libBMPImporter_la_LIBADD = ../Core/libcore.la
libBMPImporter_la_METASOURCES = AUTO
libBMPImporter_la_SOURCES = DLGImporter.cpp DLGImp.cpp DLGImpCD.cpp 
EXTRA_DIST = DLGImpCD.cpp DLGImpCD.h DLGImp.cpp DLGImp.h DLGImporter.cpp 
