lib_LTLIBRARIES = libDLGImporter.la
INCLUDES = $(all_includes)
#LDFLAGS =     
libDLGImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libDLGImporter_la_LIBADD = ../Core/libcore.la
libDLGImporter_la_METASOURCES = AUTO
libDLGImporter_la_SOURCES = DLGImporter.cpp DLGImp.cpp DLGImpCD.cpp 
EXTRA_DIST = DLGImpCD.cpp DLGImpCD.h DLGImp.cpp DLGImp.h DLGImporter.cpp 
