plugin_LTLIBRARIES = libDLGImporter.la
INCLUDES = $(all_includes)
libDLGImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libDLGImporter_la_LIBADD = ../Core/libgemrb_core.la
libDLGImporter_la_METASOURCES = AUTO
libDLGImporter_la_SOURCES = DLGImporter.cpp DLGImp.cpp DLGImpCD.cpp 
noinst_HEADERS = DLGImpCD.h DLGImp.h
