plugin_LTLIBRARIES = libFXOpcodes.la
INCLUDES = $(all_includes)
libFXOpcodes_la_LDFLAGS = -module -version-info 0:0:0
libFXOpcodes_la_LIBADD = ../Core/libgemrb_core.la
libFXOpcodes_la_METASOURCES = AUTO
libFXOpcodes_la_SOURCES = FXOpcodesCD.cpp FXOpcodes.cpp FXOpc.cpp 
noinst_HEADERS = FXOpc.h FXOpcodesCD.h
