lib_LTLIBRARIES = libGAMImporter.la
INCLUDES = $(all_includes)
libGAMImporter_la_LDFLAGS = -module -version-info 0:0:0 @LIBPTHREAD@
libGAMImporter_la_LIBADD = ../Core/libcore.la
libGAMImporter_la_METASOURCES = AUTO
libGAMImporter_la_SOURCES = GAMImporter.cpp GAMImp.cpp GAMImpCD.cpp 
noinst_HEADERS = GAMImpCD.h GAMImp.h
